# registry-faces

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF-enrich.md  LEGAL.md  README.md  commands  identity.properties  pyproject.toml  run.sh
adapters_generated/: au_registry.py  br_registry.py  br_registry2.py  ca_registry.py  gu_registry.py  in_registry.py  kz_registry.py  mk_registry.py  mv_registry.py  ng_registry.py  pr_registry.py  rw_registry.py
config/: expand_countries.toml
docs/: bad_states.txt  country_coverage.csv  schema.md  storage-layout.md  usage.md
scripts/: _gw_poll.py  _inspect_captura.py  download_shards.py  enrich_shard.py  ingest_all.py  load_shards_identity.py  nsopw_resume.py  package_shards.py  upload_shards.py  wa_resume.py
src/registry_faces/: blacklist.py  cli.py  identity_map.py  photos.py  schema.py  shards.py  store.py
src/registry_faces/adapters/: _nc_surnames.py  _nsopw.py  alabama.py  alaska.py  arizona.py  arkansas.py  base.py  colorado.py  connecticut.py  delaware.py  florida.py  georgia.py  hawaii.py  idaho.py  illinois.py  indiana.py  iowa.py  kansas.py  kentucky.py  louisiana.py  maine.py  maryland.py  michigan.py  minnesota.py  mississippi.py  missouri.py  montana.py  nebraska.py  nevada.py  new_hampshire.py  new_jersey.py  new_mexico.py  north_carolina.py  north_dakota.py  ohio.py  oklahoma.py  oregon.py  (+13 more)
tests/: test_expand_spec.py  test_identity_map.py  test_package_shards.py  test_photo_manifest.py  test_project_smoke.py  test_shard_manifest.py  test_shard_transfer.py  test_store_merge.py  test_tool_schema.py
(+23 files in other folders)
