[project]
name = "registry-faces"
version = "0.1.0"
description = "Personal sex offender registry index with agentic adapter generation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.55.0"]
openai = ["openai>=1.50.0"]
gemini = ["google-genai>=0.4.0"]
ui = ["PySide6>=6.6"]
wa = ["playwright>=1.40"]
dev = ["pytest>=8.0"]
# scripts/upload_shards.py uses boto3's S3 client against R2's
# S3-compatible API (Sig V4). Only needed when actually uploading shards.
shards = ["boto3>=1.34"]
all = [
    "anthropic>=0.55.0",
    "openai>=1.50.0",
    "google-genai>=0.4.0",
    "PySide6>=6.6",
    "playwright>=1.40",
    "pytest>=8.0",
    "boto3>=1.34",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
registry-faces = "registry_faces.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registry_faces"]
